tools/tests/ui/fail/l1049.cnf
// Test file for error code: L1049
// Expected error: Missing FINANCIAL-DECIMAL character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
